metadata/force-app/main/default/objects/ccrz__E_ProductTab__c/fields/ccrz__ContentRT__c.field-meta.xml
<CustomField>
    <fullName>ccrz__ContentRT__c</fullName>
    <description>Rich text field version of the Content field.</description>
    <label>ContentRT</label>
    <length>32000</length>
    <type>Html</type>
</CustomField>