metadata/force-app/main/default/objects/ccrz__E_ProductTab__c/fields/ccrz__Product__c.field-meta.xml
<CustomField>
    <fullName>ccrz__Product__c</fullName>
    <description>Reference to the product associated with this content</description>
    <label>Product</label>
    <referenceTo>ccrz__E_Product__c</referenceTo>
    <relationshipLabel>Product Tabs</relationshipLabel>
    <relationshipName>E_ProductTabs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>