metadata/force-app/main/default/objects/ccrz__E_ProductTab__c/fields/ccrz__Tab__c.field-meta.xml
<CustomField>
    <fullName>ccrz__Tab__c</fullName>
    <description>Tab Name used to uniquely identify and name the content</description>
    <label>Tab</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Product Info</fullName>
            </value>
            <value>
                <fullName>Specifications</fullName>
            </value>
            <value>
                <fullName>Items Included</fullName>
            </value>
            <value>
                <fullName>Shipping Info</fullName>
            </value>
            <value>
                <fullName>Why Buy this Product</fullName>
            </value>
            <value>
                <fullName>Additional Information</fullName>
            </value>
            <value>
                <fullName>Resources</fullName>
            </value>
            <value>
                <fullName>ItemsIncluded</fullName>
            </value>
            <value>
                <fullName>Resources and Additional Information</fullName>
            </value>
            <value>
                <fullName>ShippingInfo</fullName>
            </value>
            <value>
                <fullName>Why Buy This</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>